// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > Snapshots > should match snapshot for circle progress 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 160px; height: 160px;"
  >
    <svg
      height="160"
      viewBox="0 0 160 160"
      width="160"
    >
      <circle
        cx="80"
        cy="80"
        fill="none"
        r="77"
        stroke="#e5e7eb"
        stroke-width="6"
      />
      <circle
        aria-label="Progress: 75%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="text-green-500"
        cx="80"
        cy="80"
        fill="none"
        r="77"
        role="progressbar"
        stroke="currentColor"
        stroke-dasharray="483.80526865282815"
        stroke-dashoffset="120.95131716320702"
        stroke-linecap="round"
        stroke-width="6"
        style="transition: stroke-dashoffset 0.3s ease; transform: rotate(-90deg); transform-origin: center;"
      />
    </svg>
    <div
      class="absolute inset-0 flex items-center justify-center text-base font-medium text-green-600"
    >
      75%
    </div>
  </div>
</div>
`;

exports[`Progress > Snapshots > should match snapshot for line progress 1`] = `
<div>
  <div
    class="flex items-center"
  >
    <div
      class="relative overflow-hidden rounded-full bg-gray-200 h-3"
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <div
        aria-label="Progress: 50%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="h-full rounded-full transition-all duration-300 ease-in-out flex items-center justify-end bg-[var(--tiger-primary,#2563eb)]"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
    <span
      class="text-gray-700 font-medium ml-2 text-sm text-[var(--tiger-primary,#2563eb)]"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress > Snapshots > should match snapshot for striped progress 1`] = `
<div>
  <div
    class="flex items-center"
  >
    <div
      class="relative overflow-hidden rounded-full bg-gray-200 h-3"
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <div
        aria-label="Progress: 60%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="60"
        class="h-full rounded-full transition-all duration-300 ease-in-out flex items-center justify-end bg-[var(--tiger-primary,#2563eb)] bg-gradient-to-r from-transparent via-white/20 to-transparent bg-[length:2rem_2rem] animate-[progress-stripes_1s_linear_infinite]"
        role="progressbar"
        style="width: 60%;"
      />
    </div>
    <span
      class="text-gray-700 font-medium ml-2 text-sm text-[var(--tiger-primary,#2563eb)]"
    >
      60%
    </span>
  </div>
</div>
`;
